[package]
name = "valence-sheeptag"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
valence = { git = "https://github.com/valence-rs/valence" }
# dan_world = { git = "https://github.com/dashaw92/dan_world" }
dan_world = { path = "../dan_world" }
